--- a/FourthTask/style.css
+++ b/FourthTask/style.css
@@ -9,17 +9,18 @@ body {
     color: white;
 }
 
-.list-section {
-    padding: 20px 50px;
-    margin-bottom: 4px;
+.wonders-list-item {
+    width: 400px;
+    padding: 15px 10px;
+    margin-bottom: 2px;
     background: #b18979;
 }
 
-.list-section:last-child {
+.wonders-list-item:last-child {
     margin: 0;
     border-radius: 0 0 10px 10px;
 }
 
-.list-section:first-child {
+.wonders-list-item:first-child {
     border-radius: 10px 10px 0 0;
 }
