Fix code style into third layout
[#562]

--- a/ThirdTask/style.css
+++ b/ThirdTask/style.css
@@ -14,7 +14,7 @@ body {
     margin-right: 0;
 }
 
-.shell-section {
+.weather-shell-item {
     background: #2962a9;
     margin-right: 30px;
     text-align: center;
